--- a/checking.html
+++ b/checking.html
@@ -10,7 +10,7 @@
       height: 100%;
       background: #eefaa8; /* This is the yellow background */
       font-family: sans-serif;
-      overflow: hidden;
+      overflow: hidden; /* Prevent scrolling */
       touch-action: manipulation; /* Disable default touch actions like double tap zoom */
     }
 
@@ -25,20 +25,28 @@
     }
 
     canvas {
-      image-rendering: optimizeSpeed; /* Optimize for speed rather than quality */
-      image-rendering: -webkit-optimize-contrast; /* Webkit specific for sharp pixels */
-      image-rendering: crisp-edges; /* Modern browsers for sharp pixels */
-      image-rendering: pixelated; /* Ensures pixelation for scaling up */
+      /* Ensure crisp pixel rendering */
+      image-rendering: optimizeSpeed;
+      image-rendering: -webkit-optimize-contrast;
+      image-rendering: crisp-edges;
+      image-rendering: pixelated;
+      
+      /* Maximize size within container while maintaining aspect ratio */
       max-width: 100%;
       max-height: 100%;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Add a subtle shadow to the canvas */
       border-radius: 10px; /* Rounded corners for the canvas */
       background-color: white; /* Fallback background for canvas */
+      
+      /* Initial desktop default size, will be overridden by media queries for responsive sizing */
+      width: 400px;
+      height: 600px;
     }
 
     /* Desktop version - Fixed size canvas */
     @media (min-width: 768px) {
       canvas {
+        /* Explicitly set fixed dimensions for desktop */
         width: 400px;
         height: 600px;
       }
@@ -47,10 +55,11 @@
       }
     }
 
-    /* Mobile version - Responsive canvas */
+    /* Mobile version - Responsive canvas, dynamically resized by JS for non-blurry output */
     @media (max-width: 767px) {
       canvas {
-        width: 95vw; /* Use viewport width for responsiveness */
+        /* Set CSS to full available space, JS will adjust internal resolution to match */
+        width: 95vw;
         height: calc(95vw * 1.5); /* Maintain 2:3 aspect ratio (400/600 = 2/3) */
         max-height: 80vh; /* Ensure it doesn't take up too much vertical space */
       }
