--- a/index.html
+++ b/index.html
@@ -1,340 +1,252 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rui vs veggies</title>
+  <title>Rui vs Veggies</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
-    canvas { background: #eefaa8; display: block; margin: 0 auto; }
-    body { margin: 0; font-family: sans-serif; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #eefaa8; /* This is the yellow background */
+      font-family: sans-serif;
+      overflow: hidden; /* Prevent scrolling */
+      touch-action: manipulation; /* Disable default touch actions like double tap zoom */
+    }
+
+    #game-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* Default for desktop, centered */
+      justify-content: center;
+    }
+
+    canvas {
+      /* Ensure crisp pixel rendering */
+      image-rendering: optimizeSpeed;
+      image-rendering: -webkit-optimize-contrast;
+      image-rendering: crisp-edges;
+      image-rendering: pixelated;
+      
+      /* Maximize size within container while maintaining aspect ratio */
+      max-width: 100%;
+      max-height: 100%;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Add a subtle shadow to the canvas */
+      border-radius: 10px; /* Rounded corners for the canvas */
+      background-color: white; /* Fallback background for canvas */
+      
+      /* Initial desktop default size, will be overridden by media queries for responsive sizing */
+      width: 400px;
+      height: 600px;
+    }
+
+    /* Desktop version - Fixed size canvas */
+    @media (min-width: 768px) {
+      canvas {
+        /* Explicitly set fixed dimensions for desktop */
+        width: 400px;
+        height: 600px;
+      }
+      .mobile-controls, #topRightPauseButton {
+        display: none !important; /* Hide mobile controls and top-right pause button on desktop */
+      }
+    }
+
+    /* Mobile version - Responsive canvas, dynamically resized by JS for non-blurry output */
+    @media (max-width: 767px) {
+      #game-container {
+        /* Align content to the top to make room for bottom controls */
+        justify-content: flex-start;
+        /* Add padding at the bottom to push the canvas up and clear the mobile controls */
+        padding-bottom: 250px; /* Adjust this value if controls are still blocking */
+      }
+      canvas {
+        /* Set CSS to full available space, JS will adjust internal resolution to match */
+        width: 95vw;
+        height: calc(95vw * 1.5); /* Maintain 2:3 aspect ratio (400/600 = 2/3) */
+        max-height: 80vh; /* Ensure it doesn't take up too much vertical space */
+        margin-top: 20px; /* Add a little margin from the top of the viewport */
+      }
+      .mobile-controls, #topRightPauseButton {
+        display: flex; /* Show mobile controls and top-right pause button on small screens */
+      }
+    }
+
+    /* Mobile bottom controls (left/right in footer) */
+    .mobile-controls {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: flex; /* Ensure these are flex on mobile */
+      justify-content: space-between;
+      padding: 20px;
+      z-index: 100; /* Ensure it's above other game elements */
+      box-sizing: border-box;
+      width: 100%;
+      background-color: rgba(238, 250, 168, 0.7); /* Semi-transparent background for visibility */
+      border-top-left-radius: 15px; /* Rounded top corners */
+      border-top-right-radius: 15px;
+    }
+
+    /* Top-right pause button */
+    #topRightPauseButton {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 101; /* Higher z-index to ensure it's on top */
+      width: 50px;
+      height: 50px;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.9); /* Slightly less transparent */
+      border: 2px solid #000;
+      font-weight: bold;
+      color: #333;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.1s ease-in-out, transform 0.1s ease-in-out;
+    }
+
+    #topRightPauseButton:active {
+      background-color: rgba(200, 200, 200, 0.9);
+      transform: translateY(2px);
+    }
+
+    .mobile-button {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.8);
+      border: 2px solid #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.1s ease-in-out, transform 0.1s ease-in-out;
+    }
+
+    .mobile-button:active {
+      background-color: rgba(200, 200, 200, 0.8);
+      transform: translateY(2px);
+    }
+
+    /* Common menu styling for pause and game over */
+    .game-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.85); /* Slightly darker overlay for menus */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 200; /* Ensure menus are on top of everything */
+      color: white;
+      text-align: center;
+      padding: 20px;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+
+    .game-menu h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+      color: #f0f0f0;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    .game-menu div {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    .game-menu-button {
+      margin: 10px;
+      padding: 15px 30px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 1.2em;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      transition: background-color 0.2s ease-in-out, transform 0.1s ease-in-out;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .game-menu-button.secondary {
+      background-color: #f44336;
+    }
+
+    .game-menu-button:hover {
+      background-color: #45a049;
+    }
+
+    .game-menu-button.secondary:hover {
+      background-color: #d32f2f;
+    }
+
+    .game-menu-button:active {
+      transform: translateY(2px);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .hidden {
+      display: none !important;
+    }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<canvas id="game" width="400" height="600"></canvas>
-<script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
-ctx.imageSmoothingEnabled = false;
+<div id="game-container">
+  <canvas id="game" width="400" height="600"></canvas>
 
-// Debug mode - set to true to see hitboxes
-const SHOW_HITBOXES = false;
-
-// Load images
-const bgImg = new Image();
-bgImg.src = 'image/background.png';
-
-const playerImages = {
-  normal: new Image(),
-  happy: new Image(),
-  dead: new Image()
-};
-playerImages.normal.src = 'image/rui_normal.png';
-playerImages.happy.src = 'image/rui_closing_eyes.png';
-playerImages.dead.src   = 'image/rui_dead.png';
-
-// Load good item images
-const goodItemImages = [
-  new Image(),
-  new Image(),
-  new Image(),
-  new Image()
-];
-goodItemImages[0].src = 'image/rui_ramune.png';
-goodItemImages[1].src = 'image/nene_ramune.png';
-goodItemImages[2].src = 'image/tsukasa_ramune.png';
-goodItemImages[3].src = 'image/emu_ramune.png';
-
-// Load bad item images
-const badItemImages = [
-  new Image(),
-  new Image()
-];
-badItemImages[0].src = 'image/carrot.png';
-badItemImages[1].src = 'image/brokoli.png';
-
-// Load sound
-const getGoodSound = new Audio('sound/get_good.wav');
-getGoodSound.preload = 'auto';
-const getBadSound = new Audio('sound/get_bad.mp3');
-getBadSound.preload = 'auto';
-
-// Helper to ensure all images load
-function loadImage(img) {
-  return new Promise((resolve, reject) => {
-    img.onload = () => resolve();
-    img.onerror = () => reject(`Failed to load image: ${img.src}`);
-  });
-}
-
-const imagePromises = [
-  loadImage(bgImg),
-  loadImage(playerImages.normal),
-  loadImage(playerImages.happy),
-  loadImage(playerImages.dead),
-  ...goodItemImages.map(loadImage),
-  ...badItemImages.map(loadImage)
-];
-
-// Game state
-const player = {
-  x: 160, y: 500, width: 96, height: 96, speed: 300,
-  state: 'normal',
-  stateTimer: 0,
-  jumpOffset: 0,
-  jumping: false,
-  jumpSpeed: 0,
-  // Player hitbox - smaller than visual size
-  hitboxRadius: 30,
-  hitboxOffsetX: 0,
-  hitboxOffsetY: 20
-};
-
-let items = [];
-let score = 0;
-let highScore = 0;
-let gameOver = false;
-let paused = false;
-let moveLeft = false, moveRight = false;
-let lastTime = 0;
-let itemTimer = 0;
-let itemSpeedIncreaseInterval = 10; // Increase speed every 10 seconds
-let itemSpeedIncreaseAmount = 20; // Increase speed by 20
-let timeElapsed = 0; // Track time elapsed
-
-function spawnItem() {
-  const isBomb = Math.random() < 0.3;
-  const item = {
-    x: Math.random() * (canvas.width - 40),
-    y: 0,
-    size: 60,
-    isBomb,
-    speed: 100 + Math.random() * 100 + (timeElapsed / itemSpeedIncreaseInterval) * itemSpeedIncreaseAmount, // Increase speed over time
-    rotation: 0,
-    // Item hitbox - smaller than visual size
-    hitboxRadius: 15,
-    hitboxOffsetX: 0,
-    hitboxOffsetY: 0
-  };
-
-  // Randomly select good or bad item image
-  if (isBomb) {
-    item.image = badItemImages[Math.floor(Math.random() * badItemImages.length)];
-  } else {
-    item.image = goodItemImages[Math.floor(Math.random() * goodItemImages.length)];
-  }
-
-  items.push(item);
-}
-
-// Improved collision detection using circles
-function checkCollision(player, item) {
-  // Calculate center points of hitboxes
-  const playerCenterX = player.x + player.width/2 + player.hitboxOffsetX;
-  const playerCenterY = player.y + player.height/2 + player.hitboxOffsetY + player.jumpOffset;
-  const itemCenterX = item.x + item.size/2 + item.hitboxOffsetX;
-  const itemCenterY = item.y + item.size/2 + item.hitboxOffsetY;
+  <!-- Top-right pause button (always present, controlled by CSS media query) -->
+  <div id="topRightPauseButton" class="mobile-button">||</div>
   
-  // Calculate distance between centers
-  const dx = playerCenterX - itemCenterX;
-  const dy = playerCenterY - itemCenterY;
-  const distance = Math.sqrt(dx * dx + dy * dy);
+  <!-- Mobile controls (only shown on mobile via CSS media query) -->
+  <div class="mobile-controls">
+    <div id="leftButton" class="mobile-button">←</div>
+    <div id="rightButton" class="mobile-button">→</div>
+  </div>
   
-  // Check if distance is less than sum of radii
-  return distance < (player.hitboxRadius + item.hitboxRadius);
-}
+  <!-- Pause menu (unified for mobile and desktop) -->
+  <div id="pauseMenu" class="game-menu hidden">
+    <h1>Paused</h1>
+    <button id="continueButton" class="game-menu-button">Continue</button>
+    <button id="restartButtonMenu" class="game-menu-button secondary">Restart</button>
+  </div>
+  
+  <!-- Game over menu (unified for mobile and desktop) -->
+  <div id="gameOverMenu" class="game-menu hidden">
+    <h1>Game Over</h1>
+    <div id="scoreDisplay">Score: 0</div>
+    <div id="highScoreDisplay">High Score: 0</div>
+    <button id="restartButtonGameOver" class="game-menu-button">Play Again</button>
+  </div>
+</div>
 
-function update(delta) {
-    if (gameOver || paused) return;
+<!-- Link to the external game.js file -->
+<script src="game.js"></script>
 
-    timeElapsed += delta; // Increment time elapsed
-
-    itemTimer += delta;
-    if (itemTimer > 1) {
-        spawnItem();
-        itemTimer = 0;
-    }
-
-    for (let i = items.length - 1; i >= 0; i--) {
-        const item = items[i];
-        item.y += item.speed * delta;
-        item.rotation += 2 * delta;
-
-        if (checkCollision(player, item)) {
-            if (item.isBomb) {
-                player.state = 'dead';
-                gameOver = true;
-                if (score > highScore) highScore = score;
-                getBadSound.currentTime = 0;
-                getBadSound.play().catch(err => console.warn("Sound play failed:", err));
-                return;
-            } else {
-                player.state = 'happy';
-                player.stateTimer = 0.3;
-                player.jumping = true;
-                player.jumpSpeed = -300;
-                score += 100; // Increase score by 100 for good items
-                items.splice(i, 1);
-                getGoodSound.currentTime = 0;
-                getGoodSound.play().catch(err => console.warn("Sound play failed:", err));
-            }
-        }
-    }
-
-    if (player.jumping) {
-        player.jumpSpeed += 2000 * delta;
-        player.jumpOffset += player.jumpSpeed * delta;
-        if (player.jumpOffset >= 0) {
-            player.jumpOffset = 0;
-            player.jumping = false;
-        }
-    }
-
-    if (player.state === 'happy') {
-        player.stateTimer -= delta;
-        if (player.stateTimer <= 0) {
-            player.state = 'normal';
-        }
-    }
-
-    items = items.filter(item => item.y <= canvas.height);
-}
-
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
-
-  const img = playerImages[player.state] || playerImages.normal;
-  ctx.drawImage(img, player.x, player.y + player.jumpOffset, player.width, player.height);
-
-  for (const item of items) {
-    ctx.save();
-    ctx.translate(item.x + item.size / 2, item.y + item.size / 2);
-    ctx.rotate(item.rotation);
-    ctx.drawImage(item.image, -item.size / 2, -item.size / 2, item.size, item.size);
-    ctx.restore();
-
-    // Draw hitboxes if debug mode is on
-    if (SHOW_HITBOXES) {
-      ctx.save();
-      ctx.beginPath();
-      ctx.arc(
-        item.x + item.size/2 + item.hitboxOffsetX,
-        item.y + item.size/2 + item.hitboxOffsetY,
-        item.hitboxRadius,
-        0,
-        Math.PI * 2
-      );
-      ctx.strokeStyle = item.isBomb ? 'rgba(255,0,0,0.5)' : 'rgba(0,255,0,0.5)';
-      ctx.stroke();
-      ctx.restore();
-    }
-  }
-
-  // Draw player hitbox if debug mode is on
-  if (SHOW_HITBOXES) {
-    ctx.save();
-    ctx.beginPath();
-    ctx.arc(
-      player.x + player.width/2 + player.hitboxOffsetX,
-      player.y + player.height/2 + player.hitboxOffsetY + player.jumpOffset,
-      player.hitboxRadius,
-      0,
-      Math.PI * 2
-    );
-    ctx.strokeStyle = 'rgba(0,0,255,0.5)';
-    ctx.stroke();
-    ctx.restore();
-  }
-
-  ctx.fillStyle = 'black';
-  ctx.font = '16px Arial';
-  ctx.fillText(`Score: ${score}`, 10, 20);
-  ctx.fillText(`High Score: ${highScore}`, 10, 40);
-
-  if (paused) {
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.6)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = 'white';
-    ctx.font = '24px Arial';
-    ctx.textAlign = 'center';
-    ctx.fillText('Paused', canvas.width / 2, canvas.height / 2 - 40);
-    ctx.font = '18px Arial';
-    ctx.fillText('Continue (Enter)', canvas.width / 2, canvas.height / 2);
-    ctx.fillText('Restart (R)', canvas.width / 2, canvas.height / 2 + 30);
-  }
-
-  if (gameOver) {
-    ctx.fillStyle = 'rgba(255, 0, 0, 0.6)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = 'white';
-    ctx.font = '24px Arial';
-    ctx.textAlign = 'center';
-    ctx.fillText('Game Over', canvas.width / 2, canvas.height / 2 - 20);
-    ctx.font = '18px Arial';
-    ctx.fillText(`Score: ${score}`, canvas.width / 2, canvas.height / 2 + 10);
-    ctx.fillText(`High Score: ${highScore}`, canvas.width / 2, canvas.height / 2 + 40);
-    ctx.font = '12px Arial';
-    ctx.fillText('Made by shin', canvas.width / 2, canvas.height / 2 + 60);
-    ctx.font = '18px Arial';
-    ctx.fillText('Press Enter to Restart', canvas.width / 2, canvas.height / 2 + 80);
-  }
-
-  ctx.textAlign = 'start';
-}
-
-function handleMovement(delta) {
-  if (paused || gameOver) return;
-  if (moveLeft) player.x -= player.speed * delta;
-  if (moveRight) player.x += player.speed * delta;
-  player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
-}
-
-function resetGame() {
-  score = 0;
-  items = [];
-  gameOver = false;
-  paused = false;
-  player.x = 160;
-  player.state = 'normal';
-  player.jumpOffset = 0;
-  player.jumping = false;
-  player.jumpSpeed = 0;
-  itemTimer = 0;
-}
-
-function loop(timestamp) {
-  const delta = (timestamp - lastTime) / 1000;
-  lastTime = timestamp;
-  handleMovement(delta);
-  update(delta);
-  draw();
-  requestAnimationFrame(loop);
-}
-
-// Controls
-document.addEventListener('keydown', e => {
-  if (e.key === 'ArrowLeft') moveLeft = true;
-  if (e.key === 'ArrowRight') moveRight = true;
-  if (e.key === 'Enter') {
-    if (gameOver) resetGame();
-    else paused = !paused;
-  }
-  if (e.key.toLowerCase() === 'r') resetGame();
-});
-document.addEventListener('keyup', e => {
-  if (e.key === 'ArrowLeft') moveLeft = false;
-  if (e.key === 'ArrowRight') moveRight = false;
-});
-
-// Start after all images are loaded
-Promise.all(imagePromises)
-  .then(() => {
-    console.log("All assets loaded. Starting game...");
-    requestAnimationFrame(loop);
-  })
-  .catch(err => {
-    console.error("Error loading assets:", err);
-    alert("Failed to load game assets. Check image/audio paths.");
-  });
-
-</script>
 </body>
 </html>
